--- a/user.css
+++ b/user.css
@@ -811,3 +811,6 @@ input:checked~.x-toggle-indicatorWrapper .x-toggle-indicator {
 .main-yourLibraryX-entryPoints {
   background-color: transparent !important;
 }
+.Uw4tcZdmh7s4BMdgCCuu{
+  background-color: #0008174a !important;
+}
